--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-animated-navigation",
   "version": "1.0.0",
-  "description": "Animations between routes with react-router! Configuration is optional!",
-  "main": "lib/react-animated-navigation.js",
+  "description": "Painless transitions for react router!",
+  "main": "lib/react-tiger-transition.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
@@ -11,13 +11,13 @@
     "docz:build": "docz build"
   },
   "author": "Pedro Bernardino Alves Moreira",
-  "homepage": "https://github.com/pedrobern/react-animated-navigation",
+  "homepage": "https://github.com/PedroBern/react-tiger-transition",
   "bugs": {
-    "url": "https://github.com/pedrobern/react-animated-navigation/issues"
+    "url": "https://github.com/PedroBern/react-tiger-transition/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pedrobern/react-animated-navigation.git"
+    "url": "https://github.com/PedroBern/react-tiger-transition.git"
   },
   "license": "ISC",
   "devDependencies": {
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "docz": "^1.3.2",
+    "docz-theme-default": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "prop-types": "^15.7.2",
@@ -47,8 +48,5 @@
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.3.0"
   },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "docz-theme-default": "^1.2.0"
-  }
+  "dependencies": {}
 }
