--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode=production",
     "prepublish": "rm -rf ./lib && npm run build",
     "docz:dev": "docz dev",
-    "docz:build": "docz build"
+    "docz:build": "docz build",
+    "doc": "react-docgen src/ | node docs/config/buildDocs.js"
   },
   "author": "Pedro Bernardino Alves Moreira",
   "homepage": "https://github.com/PedroBern/react-tiger-transition",
@@ -28,12 +29,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "docz": "^1.3.2",
-    "docz-theme-default": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-docgen": "^4.1.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.3.0",
