--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tiger transitions for react router!",
   "main": "lib/react-tiger-transition.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode=production",
     "prepublish": "rm -rf ./lib && npm run build",
     "docz:dev": "docz dev",
@@ -30,6 +30,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
