add test renderer

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-docgen": "^4.1.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
+    "react-test-renderer": "^16.11.0",
     "react-transition-group": "^4.3.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
