exclude index files from coverage

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,9 @@
 {
   "setupFilesAfterEnv": [
    "<rootDir>/jest.setup.js"
- ]
+ ],
+ "coveragePathIgnorePatterns": [
+      "node_modules",
+      "index.js"
+  ]
 }
