--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "gh-pages": "^2.1.1",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
