--- a/example/package.json
+++ b/example/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1",
     "react-syntax-highlighter": "^11.0.2",
+    "react-tiger-transition": "^1.0.0",
     "react-transition-group": "^4.3.0",
     "url-loader": "^2.2.0"
   },
@@ -39,6 +40,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "gh-pages": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "markdown-loader": "^5.1.0",
