--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --copy-files",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --copy-files",
     "build:umd": "cross-env BABEL_ENV=es rollup -c",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "deploy": "cd example && npm run build && run gh-pages -d dist"
   },
   "author": "Pedro Bernardino Alves Moreira",
   "homepage": "https://github.com/pedrobern/react-tiger-transition",
@@ -64,7 +65,6 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.16.0",
-    "gh-pages": "^2.1.1",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.0.0-beta.5",
