new deploy script

--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
     "create": "webpack",
-    "build": "webpack -p --mode=production"
+    "build": "webpack -p --mode=production",
+    "deploy": "npm run build && run gh-pages -d dist" 
   },
   "author": "",
   "license": "ISC",
