--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --copy-files",
     "build:umd": "cross-env BABEL_ENV=es rollup -c",
     "prepublishOnly": "npm run clean && npm run build",
-    "deploy": "cd example && npm run build && run gh-pages -d dist"
+    "deploy": "cd example && npm run deploy"
   },
   "author": "Pedro Bernardino Alves Moreira",
   "homepage": "https://github.com/pedrobern/react-tiger-transition",
