--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "lint": "./node_modules/.bin/eslint src",
     "lint-fix": "./node_modules/.bin/eslint --fix src --ext .js",
     "test": "cross-env NODE_ENV=commonjs jest --config ./jest.config.json",
+    "cover": "cross-env NODE_ENV=commonjs jest --config ./jest.config.json --coverage",
     "test:watch": "npm run test -- --watch",
     "doc": "react-docgen src/ | node docs/config/buildDocs.js",
-    "cover": "npx jest --config ./jest.config.json --coverage",
     "clean": "rimraf lib dist es",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:es",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --copy-files",
@@ -57,6 +57,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "codecov": "^3.6.1",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
