--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --open",
     "create": "webpack",
     "build": "webpack -p --mode=production",
-    "deploy": "npm run build && npx gh-pages -d dist" 
+    "deploy": "npm run build && npx gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "react": "^16.9.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.9.0",
+    "react-iframe": "^1.8.0",
     "react-lowlight": "^2.0.0",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1",
