--- a/example/package.json
+++ b/example/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "gh-pages": "^2.1.1",
     "html-loader": "^0.5.5",
