--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "short_name": "React TT",
   "name": "React Tiger Transition",
   "start_url": "/react-tiger-transition/",
-  "background_color": "#333333",
-  "display": "minimal-ui",
+  "background_color": "#3367D6",
+  "display": "browser",
   "scope": "/react-tiger-transition/",
   "theme_color": "#ffa000"
 }
