--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "React TT",
   "name": "React Tiger Transition",
   "start_url": "/react-tiger-transition/",
-  "background_color": "#3367D6",
+  "background_color": "#333333",
   "display": "browser",
   "scope": "/react-tiger-transition/",
   "theme_color": "#ffa000"
