add animejs, prepare example for local play

--- a/package.json
+++ b/package.json
@@ -103,7 +103,9 @@
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.3.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "animejs": "^3.1.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
