--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,9 @@
     "start": "webpack-dev-server --open",
     "create": "webpack",
     "build": "webpack -p --mode=production",
-    "deploy": "npm run build && npx gh-pages -d dist"
+    "deploy": "npm run build && npx gh-pages -d dist",
+    "build-server": "python build-web-server.py",
+    "build:server": "npm run build && npm run build-server"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
+    "animejs": "^3.1.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.49.0",
     "file-loader": "^4.2.0",
