--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "animejs": "^3.1.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -104,8 +105,7 @@
     "react-transition-group": "^4.3.0",
     "animejs": "^3.1.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
