--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
   include:
     - stage: coverage
       node_js: "6"
-      script: ./node_modules/.bin/codecov --token="$CODECOV"
+      script: ./node_modules/.bin/codecov
     - stage: npm release
       node_js: "6"
       deploy:
