--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,9 @@
     "build": "webpack -p --mode=production",
     "deploy": "npm run build && npx gh-pages -d dist",
     "build-server": "python build-web-server.py",
-    "build:server": "npm run build && npm run build-server"
+    "build:server": "npm run build && npm run build-server",
+    "add": "npm i react-tiger-transition",
+    "remove": "npm uninstall react-tiger-transition"
   },
   "author": "",
   "license": "ISC",
@@ -43,11 +45,13 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "gh-pages": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "markdown-loader": "^5.1.0",
     "raw-loader": "^3.1.0",
     "style-loader": "^1.0.0",
