--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
     "create": "webpack",
-    "build": "webpack -p --mode=production",
+    "build": "rimraf dist && webpack -p --mode=production",
     "deploy": "npm run build && npx gh-pages -d dist",
     "build-server": "python build-web-server.py",
     "build:server": "npm run build && npm run build-server",
@@ -35,7 +35,7 @@
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1",
     "react-syntax-highlighter": "^11.0.2",
-    "react-tiger-transition": "^2.0.1",
+    "react-tiger-transition": "^2.1.0",
     "react-transition-group": "^4.3.0",
     "url-loader": "^2.2.0"
   },
@@ -54,6 +54,7 @@
     "json-loader": "^0.5.7",
     "markdown-loader": "^5.1.0",
     "raw-loader": "^3.1.0",
+    "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
