--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "codecov": "^3.6.1",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
@@ -73,7 +72,6 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.16.0",
     "history": "^4.10.1",
-    "html-webpack-plugin": "^3.2.0",
     "husky": "^4.0.0-beta.5",
     "javascript-stringify": "^2.0.0",
     "jest": "^24.9.0",
@@ -91,19 +89,16 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-insert": "^1.1.0",
-    "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-size-snapshot": "^0.10.0",
     "rollup-plugin-terser": "^5.1.2",
     "style-loader": "^1.0.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-cli": "^3.3.9"
   },
   "peerDependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.3.0",
     "animejs": "^3.1.0"
