--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ jobs:
       script:
       - npm run cover
       - ./node_modules/.bin/codecov
-    allow_failures:
     - stage: npm release
       node_js: "6"
+      script:
+      - npm run build
       deploy:
-        script: npm run build
         provider: npm
         email: "$NPM_EMAIL"
         api_key: "$NPM_TOKEN"
