--- a/package.json
+++ b/package.json
@@ -106,8 +106,7 @@
   "peerDependencies": {
     "react": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-transition-group": "^4.3.0",
-    "animejs": "^3.1.0"
+    "react-transition-group": "^4.3.0"
   },
   "dependencies": {},
   "husky": {
