--- a/example/package.json
+++ b/example/package.json
@@ -50,11 +50,13 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
     "gh-pages": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "markdown-loader": "^5.1.0",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^3.1.0",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
