--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
   "dependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-fix",
+      "pre-commit": "npm run lint",
       "pre-push": "npm run pre-push-test"
     }
   },
