--- a/website/package.json
+++ b/website/package.json
@@ -22,7 +22,6 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
-    "animejs": "^3.1.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.49.0",
     "file-loader": "^4.2.0",
@@ -32,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-codemirror2": "^6.0.0",
+    "react-codesandboxer": "^3.1.5",
     "react-dom": "^16.9.0",
     "react-lowlight": "^2.0.0",
     "react-markdown": "^4.2.2",
