--- a/website/package.json
+++ b/website/package.json
@@ -57,6 +57,7 @@
     "markdown-loader": "^5.1.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^3.1.0",
+    "react-svg-loader": "^3.0.3",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
