--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,8 @@
     "build-local": "rimraf dist && webpack -p --local=true --mode=production",
     "build": "rimraf dist && webpack -p --mode=production",
     "deploy": "npm run build && npx gh-pages -d dist",
-    "build-server": "python build-web-server.py",
-    "build:server": "npm run build-local && npm run build-server",
+    "build-server": "npx http-server ./dist",
+    "build:server": "npm run build-local && build-server",
     "add": "npm i react-tiger-transition",
     "remove": "npm uninstall react-tiger-transition"
   },
@@ -53,6 +53,7 @@
     "gh-pages": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "json-loader": "^0.5.7",
     "markdown-loader": "^5.1.0",
     "postcss-loader": "^3.0.0",
