--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tiger-transition",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "Animated page transitions for react.",
   "main": "index.js",
   "module": "esm/index.js",
@@ -52,7 +52,7 @@
     "animation",
     "transitions"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
