--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,7 +13,10 @@ jobs:
     - uses: actions/stale@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'This issue has been labeled as stale.'
-        stale-pr-message: 'This pull request has been labeled as stale.'
+        stale-issue-message: 'This issue has been automatically marked as stale. It will be closed if no further activity occurs.'
+        stale-pr-message: 'This pull request has been automatically marked as stale. It will be closed if no further activity occurs.'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
+        days-before-stale: 30
+        days-before-close: 5
+        exempt-labels: 'pinned'
