--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.11.0",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "^4.4.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.25.2",
     "rollup-plugin-babel": "^4.3.3",
@@ -118,5 +118,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "sideEffects": ["**/*.css"]
+  "sideEffects": [
+    "**/*.css"
+  ]
 }
